--- a/terms.html
+++ b/terms.html
@@ -57,7 +57,7 @@
 
               <div class="muted">
 
-                Effective Date: [Insert Date]
+                Effective Date: 2026 February 19
                 <br><br>
                 By accessing or using surewhynot.app (“Site”), you agree to be bound by these Terms and Conditions. If you do not agree, you must discontinue use immediately.
 
