--- a/log-explorer.html
+++ b/log-explorer.html
@@ -99,7 +99,42 @@
     .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono","Courier New", monospace; }
     .rightScroll { max-height:520px; overflow:auto; border-radius:12px; }
     .dim { opacity:.65 }
-  </style>
+
+    /* Progress (kept congruent with existing palette) */
+    .progWrap{ height:10px; border:1px solid rgba(23,36,59,.85); border-radius:999px; overflow:hidden; background:rgba(11,21,40,.55) }
+    .progBar{ height:100%; width:0%; background: rgba(246,195,74,.75) }
+  
+/* Bucket histogram (severity-stacked) */
+.bucketLegend{ display:flex; gap:10px; align-items:center; margin:4px 0 8px; flex-wrap:wrap; }
+.bucketSwatch{ width:10px; height:10px; border-radius:3px; display:inline-block; }
+.bucketSwatch.err{ background: rgba(255, 92, 92, .85); }
+.bucketSwatch.warn{ background: rgba(246, 195, 74, .85); }
+.bucketSwatch.info{ background: rgba(120, 170, 255, .55); }
+
+.bucketRow{ display:flex; gap:8px; align-items:center; margin:2px 0; }
+.bucketTime{ width:52px; }
+.bucketCount{ width:52px; text-align:right; }
+.bucketBarOuter{
+  flex:1;
+  height:10px;
+  border-radius:999px;
+  background: rgba(11,21,40,.45);
+  border:1px solid rgba(23,36,59,.55);
+  overflow:hidden;
+  position:relative;
+}
+.bucketBar{
+  height:100%;
+  display:flex;
+  border-radius:999px;
+  overflow:hidden;
+  box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);
+}
+.bucketBar .seg{ height:100%; display:block; }
+.bucketBar .seg.err{ background: rgba(255, 92, 92, .85); }
+.bucketBar .seg.warn{ background: rgba(246, 195, 74, .85); }
+.bucketBar .seg.info{ background: rgba(120, 170, 255, .55); }
+</style>
 
   <script>
   async function loadPartials() {
@@ -135,6 +170,18 @@
                   <input id="file" type="file" accept=".log,.txt,.ndjson,.json,text/plain,application/json" />
                 </div>
                 <div class="muted mini" id="fileNote" style="margin-top:10px"></div>
+              </div>
+
+              <div class="hr"></div>
+
+              <!-- Progress / status -->
+              <div class="row" style="align-items:center">
+                <div class="grow">
+                  <div class="muted mini" id="status">Idle.</div>
+                  <div class="progWrap"><div class="progBar" id="prog"></div></div>
+                </div>
+                <span class="tag"><span class="dim">Read:</span> <b id="bytes">0</b></span>
+                <span class="tag"><span class="dim">Lines:</span> <b id="lines">0</b></span>
               </div>
 
               <div class="hr"></div>
@@ -243,10 +290,16 @@
 
 <script>
 (() => {
-  // --- Worker (parse + filter + aggregate) ---
+  // --- Worker (stream parse + query + aggregate) ---
   const workerSrc = `
     const LEVELS = ["error","warn","warning","info","debug","trace","fatal"];
     const monthMap = {Jan:0,Feb:1,Mar:2,Apr:3,May:4,Jun:5,Jul:6,Aug:7,Sep:8,Oct:9,Nov:10,Dec:11};
+
+    let EVENTS = [];
+    let RAW_LINES = 0;
+    let BYTES = 0;
+    let TOTAL_BYTES = 0;
+    let carry = "";
 
     function normLevel(s){
       if(!s) return "";
@@ -260,7 +313,7 @@
       const t = Date.parse(s);
       if (!Number.isNaN(t)) return t;
 
-      const s2 = s.replace(" ", "T");
+      const s2 = String(s).replace(" ", "T");
       const t2 = Date.parse(s2);
       if (!Number.isNaN(t2)) return t2;
 
@@ -279,7 +332,7 @@
       line = String(line || "").trim();
       if (!line) return null;
 
-      if (line.startsWith("{") && line.endsWith("}")){
+      if (line[0] === "{" && line[line.length-1] === "}"){
         try{
           const o = JSON.parse(line);
           const time = tryParseTime(o.time || o.timestamp || o.ts || o["@timestamp"]) ?? null;
@@ -300,7 +353,7 @@
             const k = p.slice(0,i);
             const v = p.slice(i+1);
             if (k && v){
-              kv[k] = v.replace(/^"|"$/g,"");
+              kv[k] = v.replace(/^\"|\"$/g,"");
               hits++;
             }
           }
@@ -410,83 +463,132 @@
       try { return new Date(t).toISOString(); } catch(e){ return ""; }
     }
 
+    function computeAggregates(list){
+      let cErr=0,cWarn=0,cInfo=0;
+      const srcCounts = new Map();
+      const buckets = new Map();
+
+      for (const ev of list){
+        const lvl = (ev.level || "").toLowerCase();
+        const isErr = (lvl === "error" || lvl === "fatal");
+        const isWarn = (lvl === "warn");
+        const isInfo = (lvl === "info");
+
+        if (isErr) cErr++;
+        else if (isWarn) cWarn++;
+        else if (isInfo) cInfo++;
+
+        if (ev.source){
+          srcCounts.set(ev.source, (srcCounts.get(ev.source)||0)+1);
+        }
+
+        const bm = bucketMinute(ev.time);
+        if (bm != null){
+          const cur = buckets.get(bm) || { t: bm, e:0, w:0, i:0, total:0 };
+          if (isErr) cur.e++;
+          else if (isWarn) cur.w++;
+          else cur.i++; // everything else counts as "info/other" for bucket density
+          cur.total++;
+          buckets.set(bm, cur);
+        }
+      }
+
+      let topSrc = "—";
+      let topN = 0;
+      for (const [k,v] of srcCounts.entries()){
+        if (v > topN){ topN=v; topSrc=k; }
+      }
+
+      const bucketArr = Array.from(buckets.entries())
+        .sort((a,b)=>a[0]-b[0])
+        .slice(-60)
+        .map(([, o]) => ({ t: o.t, iso: toISO(o.t), e: o.e, w: o.w, i: o.i, total: o.total }));
+
+      return { counts:{cErr,cWarn,cInfo,topSrc}, bucketArr };
+    }
+
+    function runQuery({q, level, t0, t1, limit=500, offset=0}){
+      const toks = tokenize(q);
+      const t0ms = tryParseTime(t0) ?? null;
+      const t1ms = tryParseTime(t1) ?? null;
+      const wantLevel = (level || "").toLowerCase();
+
+      const out = [];
+      for (const ev of EVENTS){
+        if (wantLevel && (ev.level || "").toLowerCase() !== wantLevel) continue;
+
+        if (t0ms != null){
+          const tt = ev.time;
+          if (tt == null || tt < t0ms) continue;
+        }
+        if (t1ms != null){
+          const tt = ev.time;
+          if (tt == null || tt > t1ms) continue;
+        }
+
+        if (!evalQuery(ev, toks)) continue;
+        out.push(ev);
+      }
+
+      out.sort((a,b) => (b.time ?? -Infinity) - (a.time ?? -Infinity));
+
+      const agg = computeAggregates(out);
+      const page = out.slice(offset, offset + limit);
+      return { total: out.length, page, ...agg };
+    }
+
     self.onmessage = (e) => {
       const { type, payload } = e.data || {};
-      if (type === "PARSE"){
-        const lines = payload.text.split(/\\r?\\n/);
-        const events = [];
-        for (const line of lines){
-          const ev = parseLine(line);
-          if (ev) events.push(ev);
-        }
-        self.postMessage({ type:"PARSED", payload:{ events }});
+
+      if (type === "RESET"){
+        EVENTS = [];
+        RAW_LINES = 0;
+        BYTES = 0;
+        TOTAL_BYTES = payload.totalBytes || 0;
+        carry = "";
+        self.postMessage({ type:"PROGRESS", payload:{ bytes:0, lines:0, totalBytes: TOTAL_BYTES }});
         return;
       }
 
-      if (type === "FILTER"){
-        const { events, q, level, t0, t1 } = payload;
+      if (type === "CHUNK"){
+        const chunk = payload.text || "";
+        BYTES += payload.bytes || 0;
 
-        const toks = tokenize(q);
-        const t0ms = tryParseTime(t0) ?? null;
-        const t1ms = tryParseTime(t1) ?? null;
-        const wantLevel = (level || "").toLowerCase();
+        const merged = carry + chunk;
+        const lines = merged.split(/\\r?\\n/);
+        carry = lines.pop() || "";
 
-        const out = [];
-        for (const ev of events){
-          if (wantLevel && (ev.level || "").toLowerCase() !== wantLevel) continue;
-
-          if (t0ms != null){
-            const tt = ev.time;
-            if (tt == null || tt < t0ms) continue;
-          }
-          if (t1ms != null){
-            const tt = ev.time;
-            if (tt == null || tt > t1ms) continue;
-          }
-
-          if (!evalQuery(ev, toks)) continue;
-          out.push(ev);
+        for (const line of lines){
+          RAW_LINES++;
+          const ev = parseLine(line);
+          if (ev) EVENTS.push(ev);
         }
 
-        out.sort((a,b) => (b.time ?? -Infinity) - (a.time ?? -Infinity));
-
-        let cErr=0,cWarn=0,cInfo=0;
-        const srcCounts = new Map();
-        const buckets = new Map();
-
-        for (const ev of out){
-          const lvl = (ev.level || "").toLowerCase();
-          if (lvl === "error" || lvl === "fatal") cErr++;
-          else if (lvl === "warn") cWarn++;
-          else if (lvl === "info") cInfo++;
-
-          if (ev.source){
-            srcCounts.set(ev.source, (srcCounts.get(ev.source)||0)+1);
-          }
-
-          const bm = bucketMinute(ev.time);
-          if (bm != null) buckets.set(bm, (buckets.get(bm)||0)+1);
+        if (RAW_LINES % 5000 === 0){
+          self.postMessage({ type:"PROGRESS", payload:{ bytes: BYTES, lines: RAW_LINES, totalBytes: TOTAL_BYTES }});
+          const preview = runQuery({ q:"", level:"", t0:"", t1:"", limit:200, offset:0 });
+          self.postMessage({ type:"PREVIEW", payload:{ parsed: EVENTS.length, ...preview }});
         }
+        return;
+      }
 
-        let topSrc = "";
-        let topN = 0;
-        for (const [k,v] of srcCounts.entries()){
-          if (v > topN){ topN=v; topSrc=k; }
+      if (type === "FINALIZE"){
+        if (carry.trim()){
+          RAW_LINES++;
+          const ev = parseLine(carry);
+          if (ev) EVENTS.push(ev);
         }
+        carry = "";
+        self.postMessage({ type:"DONE", payload:{ bytes: BYTES, lines: RAW_LINES, parsed: EVENTS.length }});
+        const preview = runQuery({ q:"", level:"", t0:"", t1:"", limit:200, offset:0 });
+        self.postMessage({ type:"PREVIEW", payload:{ parsed: EVENTS.length, ...preview }});
+        return;
+      }
 
-        const bucketArr = Array.from(buckets.entries())
-          .sort((a,b)=>a[0]-b[0])
-          .slice(-60)
-          .map(([t,c]) => ({ t, iso: toISO(t), c }));
-
-        self.postMessage({
-          type:"FILTERED",
-          payload:{
-            out,
-            counts:{ cErr, cWarn, cInfo, topSrc: topSrc || "—" },
-            bucketArr
-          }
-        });
+      if (type === "QUERY"){
+        const res = runQuery(payload || {});
+        self.postMessage({ type:"RESULTS", payload: res });
+        return;
       }
     };
   `;
@@ -522,10 +624,15 @@
   const file = document.getElementById("file");
   const fileNote = document.getElementById("fileNote");
 
-  let EVENTS = [];
+  const statusEl = document.getElementById("status");
+  const progEl = document.getElementById("prog");
+  const bytesEl = document.getElementById("bytes");
+  const linesEl = document.getElementById("lines");
+
   let SHOWN = [];
 
-  const MAX_WARN_BYTES = 15 * 1024 * 1024; // warn only (does not block)
+  const MAX_WARN_BYTES = 15 * 1024 * 1024; // warn only
+  const MAX_PASTE_SHOW_BYTES = 2 * 1024 * 1024; // don't dump huge file into textarea
 
   function esc(s){
     return String(s ?? "")
@@ -563,14 +670,49 @@
       bucketsEl.textContent = "—";
       return;
     }
-    const max = Math.max(...arr.map(x=>x.c));
-    const lines = arr.map(x => {
-      const barLen = Math.max(1, Math.round((x.c / max) * 24));
-      const bar = "█".repeat(barLen);
-      return `${x.iso.slice(11,16)}  ${String(x.c).padStart(3," ")}  ${bar}`;
-    });
-    bucketsEl.textContent = lines.join("\n");
+
+    // max total for scaling the overall bar length (density)
+    const maxT = Math.max(...arr.map(x => x.total || 0), 1);
+
+    const legend = `
+      <div class="bucketLegend">
+        <span class="bucketSwatch err"></span><span class="dim">error</span>
+        <span class="bucketSwatch warn"></span><span class="dim">warn</span>
+        <span class="bucketSwatch info"></span><span class="dim">info/other</span>
+      </div>
+    `;
+
+    const rows = arr.map(x => {
+      const total = x.total || 0;
+      const e = x.e || 0;
+      const w = x.w || 0;
+      const i = x.i || 0;
+
+      const densityPct = Math.max(3, Math.round((total / maxT) * 100)); // 3% min so it never vanishes
+      const ePct = total ? (e / total) * 100 : 0;
+      const wPct = total ? (w / total) * 100 : 0;
+      const iPct = Math.max(0, 100 - ePct - wPct);
+
+      const time = (x.iso || "").slice(11,16);
+
+      return `
+        <div class="bucketRow">
+          <div class="bucketTime dim">${esc(time)}</div>
+          <div class="bucketBarOuter" title="total=${total}  error=${e}  warn=${w}  info/other=${i}">
+            <div class="bucketBar" style="width:${densityPct}%">
+              <span class="seg err" style="width:${ePct}%"></span>
+              <span class="seg warn" style="width:${wPct}%"></span>
+              <span class="seg info" style="width:${iPct}%"></span>
+            </div>
+          </div>
+          <div class="bucketCount dim">${String(total).padStart(5," ")}</div>
+        </div>
+      `;
+    }).join("");
+
+    bucketsEl.innerHTML = legend + rows;
   }
+
 
   function download(name, text, mime){
     const blob = new Blob([text], {type: mime || "text/plain"});
@@ -598,20 +740,45 @@
     return lines.join("\n");
   }
 
+  function setStatus(text){
+    statusEl.textContent = text;
+  }
+
+  function setProgress(bytes, totalBytes, lines){
+    bytesEl.textContent = `${Math.round(bytes/1024/1024)} MB`;
+    linesEl.textContent = String(lines);
+    const pct = totalBytes ? Math.min(100, Math.round((bytes/totalBytes)*100)) : 0;
+    progEl.style.width = pct + "%";
+    return pct;
+  }
+
   // --- Actions ---
   function parse(){
-    worker.postMessage({ type:"PARSE", payload:{ text: raw.value || "" }});
+    // manual paste mode only
+    const text = raw.value || "";
+    if (!text.trim()) return;
+
+    setStatus("Parsing pasted text…");
+    progEl.style.width = "0%";
+    bytesEl.textContent = "0";
+    linesEl.textContent = "0";
+
+    const approxBytes = new Blob([text]).size;
+    worker.postMessage({ type:"RESET", payload:{ totalBytes: approxBytes }});
+    worker.postMessage({ type:"CHUNK", payload:{ text, bytes: approxBytes }});
+    worker.postMessage({ type:"FINALIZE", payload:{} });
   }
 
   function apply(){
     worker.postMessage({
-      type:"FILTER",
+      type:"QUERY",
       payload:{
-        events: EVENTS,
         q: q.value || "",
         level: level.value || "",
         t0: t0.value || "",
-        t1: t1.value || ""
+        t1: t1.value || "",
+        limit: 500,
+        offset: 0
       }
     });
   }
@@ -625,15 +792,23 @@
     level.value = "";
     t0.value = "";
     t1.value = "";
-    EVENTS = [];
+
     SHOWN = [];
+
     nParsed.textContent = "0";
     nShow.textContent = "0";
     cErr.textContent = "0";
     cWarn.textContent = "0";
     cInfo.textContent = "0";
     topSrc.textContent = "—";
+
     if (fileNote) fileNote.textContent = "";
+
+    setStatus("Idle.");
+    progEl.style.width = "0%";
+    bytesEl.textContent = "0";
+    linesEl.textContent = "0";
+
     renderTable([]);
     renderBuckets([]);
   });
@@ -659,36 +834,90 @@
 
   worker.onmessage = (e) => {
     const { type, payload } = e.data || {};
-    if (type === "PARSED"){
-      EVENTS = payload.events || [];
-      nParsed.textContent = String(EVENTS.length);
-      apply();
+
+    if (type === "PROGRESS"){
+      const pct = setProgress(payload.bytes || 0, payload.totalBytes || 0, payload.lines || 0);
+      setStatus(`Parsing… ${pct}%`);
       return;
     }
-    if (type === "FILTERED"){
-      SHOWN = payload.out || [];
-      nShow.textContent = String(SHOWN.length);
+
+    if (type === "PREVIEW"){
+      nParsed.textContent = String(payload.parsed ?? 0);
+
+      // counts + buckets
       cErr.textContent = String(payload.counts?.cErr ?? 0);
       cWarn.textContent = String(payload.counts?.cWarn ?? 0);
       cInfo.textContent = String(payload.counts?.cInfo ?? 0);
       topSrc.textContent = String(payload.counts?.topSrc ?? "—");
+
+      SHOWN = payload.page || [];
+      nShow.textContent = String(payload.total ?? 0);
       renderTable(SHOWN);
       renderBuckets(payload.bucketArr || []);
+      return;
+    }
+
+    if (type === "RESULTS"){
+      SHOWN = payload.page || [];
+      nShow.textContent = String(payload.total ?? 0);
+
+      cErr.textContent = String(payload.counts?.cErr ?? 0);
+      cWarn.textContent = String(payload.counts?.cWarn ?? 0);
+      cInfo.textContent = String(payload.counts?.cInfo ?? 0);
+      topSrc.textContent = String(payload.counts?.topSrc ?? "—");
+
+      renderTable(SHOWN);
+      renderBuckets(payload.bucketArr || []);
+      setStatus("Ready.");
+      return;
+    }
+
+    if (type === "DONE"){
+      nParsed.textContent = String(payload.parsed ?? 0);
+      progEl.style.width = "100%";
+      setStatus("Parsed. Ready.");
+      return;
     }
   };
 
-  // --- File drop / picker ---
+  // --- File drop / picker (stream read) ---
   async function readFile(f){
     if (fileNote){
       if (f && typeof f.size === "number" && f.size > MAX_WARN_BYTES){
-        fileNote.textContent = `Note: Large file (${Math.round(f.size/1024/1024)} MB). Parsing may be slow in-browser.`;
+        fileNote.textContent = `Note: Large file (${Math.round(f.size/1024/1024)} MB). Parsing is streamed + incremental.`;
       } else {
         fileNote.textContent = "";
       }
     }
-    const text = await f.text();
-    raw.value = text;
-    parse();
+
+    setStatus("Reading…");
+    progEl.style.width = "0%";
+    bytesEl.textContent = "0";
+    linesEl.textContent = "0";
+
+    // Avoid textarea blowups on big files
+    if (f.size <= MAX_PASTE_SHOW_BYTES) {
+      raw.value = "";
+    } else {
+      raw.value = "(loaded via stream; not displayed here)";
+    }
+
+    worker.postMessage({ type:"RESET", payload:{ totalBytes: f.size }});
+
+    const reader = f.stream().getReader();
+    const decoder = new TextDecoder();
+
+    while (true){
+      const { value, done } = await reader.read();
+      if (done) break;
+      worker.postMessage({ type:"CHUNK", payload:{ text: decoder.decode(value, { stream:true }), bytes: value.byteLength }});
+    }
+
+    const tail = decoder.decode();
+    if (tail) worker.postMessage({ type:"CHUNK", payload:{ text: tail, bytes: 0 }});
+
+    setStatus("Parsing…");
+    worker.postMessage({ type:"FINALIZE", payload:{} });
   }
 
   file.addEventListener("change", () => {
@@ -712,10 +941,9 @@
     const f = e.dataTransfer && e.dataTransfer.files && e.dataTransfer.files[0];
     if (f) readFile(f);
   });
-//1
+
 })();
 </script>
 
 </body>
 </html>
-
