--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               </ul>
               
 			   <h2 class="h2">Check out the lab that I am (slowly) but surely bringing online. It's a ghost in the machine now but stick around!</h2>
-			   href="https://bighomieced.app/">SureWhyNot.APP</a>
+			   <a href="https://bighomieced.app/">BigHomieCed's Labs </a>
 			  
 			  <div style="height:14px"></div>
               <hr>
