--- a/about.html
+++ b/about.html
@@ -9,12 +9,12 @@
   <!-- SEO -->
   <meta name="description" content="About SureWhyNot: an independent web studio building fast, lightweight browser tools and small interactive games. Local-first design. No accounts required." />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://surewhynot.app/about.html" />
+  <link rel="canonical" href="https://surewhynot.app/about" />
 
   <meta property="og:title" content="About — SureWhyNot" />
   <meta property="og:description" content="Independent web studio focused on fast browser tools, lightweight games, and privacy-first design." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://surewhynot.app/about.html" />
+  <meta property="og:url" content="https://surewhynot.app/about" />
 
   <link rel="stylesheet" href="/assets/site.css">
   
@@ -32,7 +32,7 @@
   "@context": "https://schema.org",
   "@type": "AboutPage",
   "name": "About SureWhyNot Dev Studio",
-  "url": "https://surewhynot.app/about.html",
+  "url": "https://surewhynot.app/about",
   "description": "Independent web studio building fast browser tools and lightweight games with privacy-first principles."
 }
 </script>
