--- a/csp-analyzer.html
+++ b/csp-analyzer.html
@@ -11,12 +11,12 @@
 
   <title>CSP & Security Headers Analyzer — Parse, Score, Report (Local)</title>
   <meta name="description" content="Analyze Content-Security-Policy and security headers. Parse directives, flag unsafe patterns, severity findings, and export a report. Runs locally in your browser — no uploads." />
-  <link rel="canonical" href="https://surewhynot.app/csp-analyzer.html" />
+  <link rel="canonical" href="https://surewhynot.app/csp-analyzer" />
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="CSP & Security Headers Analyzer (Local)">
   <meta property="og:description" content="Parse CSP + security headers, severity findings, and export reports. Runs locally — no uploads.">
-  <meta property="og:url" content="https://surewhynot.app/csp-analyzer.html">
+  <meta property="og:url" content="https://surewhynot.app/csp-analyzer">
 
   <link rel="stylesheet" href="/assets/site.css">
 
@@ -27,7 +27,7 @@
     "name":"CSP & Security Headers Analyzer",
     "applicationCategory":"DeveloperApplication",
     "operatingSystem":"Web",
-    "url":"https://surewhynot.app/csp-analyzer.html",
+    "url":"https://surewhynot.app/csp-analyzer",
     "description":"Analyze Content-Security-Policy and security headers. Parse directives, flag unsafe patterns, severity findings, and export reports. Runs locally in your browser — no uploads."
   }
   </script>
