--- a/hash-generator.html
+++ b/hash-generator.html
@@ -12,14 +12,14 @@
   <title>Hash Generator & Encoders — MD5, SHA-1, SHA-256, SHA-512, Base64, URL Encode (Free)</title>
   <meta name="description" content="Free hash generator and encoder/decoder tools. Generate MD5, SHA-1, SHA-256, SHA-384, SHA-512, HMAC-SHA256. Base64 encode/decode, URL encode/decode, Hex, HTML entities, ROT13, and JWT decode. Runs locally in your browser — no uploads." />
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
-  <link rel="canonical" href="https://surewhynot.app/hash-generator.html">
+  <link rel="canonical" href="https://surewhynot.app/hash-generator">
 
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="SureWhyNot">
   <meta property="og:locale" content="en_US">
   <meta property="og:title" content="Hash Generator & Encoders (Free, Client-Side)">
   <meta property="og:description" content="MD5/SHA hashes, HMAC, Base64, URL/Hex/HTML encoders, ROT13, JWT decode — runs in your browser.">
-  <meta property="og:url" content="https://surewhynot.app/hash-generator.html">
+  <meta property="og:url" content="https://surewhynot.app/hash-generator">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Hash Generator & Encoders (Free, Client-Side)">
@@ -34,7 +34,7 @@
     "name": "Hash Generator & Encoders",
     "applicationCategory": "DeveloperApplication",
     "operatingSystem": "Web",
-    "url": "https://surewhynot.app/hash-generator.html",
+    "url": "https://surewhynot.app/hash-generator",
     "isAccessibleForFree": true,
     "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" },
     "description": "Free hash generator and encoder/decoder tools: MD5, SHA-1, SHA-256, SHA-384, SHA-512, HMAC-SHA256, Base64, URL, Hex, HTML entities, ROT13, JWT decode. Runs locally in the browser."
