--- a/log-explorer.html
+++ b/log-explorer.html
@@ -11,7 +11,7 @@
 
   <title>Log Explorer — Parse, Search, Filter, Aggregate & Export Logs (Free)</title>
   <meta name="description" content="Free client-side log explorer to parse .log/.txt/NDJSON, search (AND/OR, field:value), filter by time/level, aggregate counts, and export JSON/CSV. Runs locally in your browser — no uploads." />
-  <link rel="canonical" href="https://surewhynot.app/log-explorer.html" />
+  <link rel="canonical" href="https://surewhynot.app/log-explorer" />
   <meta name="robots" content="index,follow" />
 
   <!-- Open Graph -->
@@ -19,7 +19,7 @@
   <meta property="og:site_name" content="surewhynot.app" />
   <meta property="og:title" content="Log Explorer — Parse, Search, Filter, Aggregate & Export Logs (Free)" />
   <meta property="og:description" content="Parse logs/NDJSON locally. Search, filter, aggregate, export JSON/CSV. No uploads." />
-  <meta property="og:url" content="https://surewhynot.app/log-explorer.html" />
+  <meta property="og:url" content="https://surewhynot.app/log-explorer" />
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary" />
@@ -36,7 +36,7 @@
     "name": "Log Explorer",
     "applicationCategory": "DeveloperApplication",
     "operatingSystem": "Web",
-    "url": "https://surewhynot.app/log-explorer.html",
+    "url": "https://surewhynot.app/log-explorer",
     "description": "Free client-side log explorer: parse logs/NDJSON, search (AND/OR, field:value), filter by time/level, aggregate counts, and export JSON/CSV. Runs locally in your browser — no uploads.",
     "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
   }
