--- a/privacy.html
+++ b/privacy.html
@@ -9,12 +9,12 @@
   <!-- SEO -->
   <meta name="description" content="Privacy Policy for SureWhyNot. Learn how data is handled, local storage usage, advertising policies, and analytics practices." />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://surewhynot.app/privacy.html" />
+  <link rel="canonical" href="https://surewhynot.app/privacy" />
 
   <meta property="og:title" content="Privacy — SureWhyNot" />
   <meta property="og:description" content="Privacy policy outlining data handling, local storage, analytics, and advertising practices." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://surewhynot.app/privacy.html" />
+  <meta property="og:url" content="https://surewhynot.app/privacy" />
 
   <link rel="stylesheet" href="/assets/site.css">
   
@@ -32,7 +32,7 @@
   "@context": "https://schema.org",
   "@type": "PrivacyPolicy",
   "name": "Privacy Policy — SureWhyNot",
-  "url": "https://surewhynot.app/privacy.html",
+  "url": "https://surewhynot.app/privacy",
   "description": "Privacy policy describing data handling, local storage, analytics, and advertising practices."
 }
 </script>
@@ -163,7 +163,7 @@
 
                 Contact:
                 <br>
-                Privacy questions: <a href="/contact.html" class="kbd">privacy@surewhynot.app</a>
+                Privacy questions: <a href="/contact" class="kbd">privacy@surewhynot.app</a>
 
               </div>
             </div>
