--- a/terms.html
+++ b/terms.html
@@ -9,12 +9,12 @@
   <!-- SEO -->
   <meta name="description" content="Terms and Conditions for SureWhyNot. Usage rules, tool output limitations, browser game policies, advertising disclosures, and liability limitations." />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://surewhynot.app/terms.html" />
+  <link rel="canonical" href="https://surewhynot.app/terms" />
 
   <meta property="og:title" content="Terms — SureWhyNot" />
   <meta property="og:description" content="Usage terms covering site use, tool output, browser games, advertising, and liability limitations." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://surewhynot.app/terms.html" />
+  <meta property="og:url" content="https://surewhynot.app/terms" />
 
   <link rel="stylesheet" href="/assets/site.css">
   
@@ -32,7 +32,7 @@
   "@context": "https://schema.org",
   "@type": "WebPage",
   "name": "Terms and Conditions — SureWhyNot",
-  "url": "https://surewhynot.app/terms.html",
+  "url": "https://surewhynot.app/terms",
   "description": "Terms and Conditions outlining usage rules, tool limitations, game policies, advertising disclosures, and liability limitations."
 }
 </script>
