--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,12 @@
   <!-- SEO -->
   <meta name="description" content="Contact SureWhyNot. Send bug reports, technical issues, improvement suggestions, tool requests, general questions, or privacy inquiries to the right inbox." />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://surewhynot.app/contact.html" />
+  <link rel="canonical" href="https://surewhynot.app/contact" />
 
   <meta property="og:title" content="Contact — SureWhyNot" />
   <meta property="og:description" content="Send bug reports, technical issues, suggestions, tool requests, general questions, or privacy inquiries." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://surewhynot.app/contact.html" />
+  <meta property="og:url" content="https://surewhynot.app/contact" />
 
   <link rel="stylesheet" href="/assets/site.css">
 
@@ -32,7 +32,7 @@
   "@context": "https://schema.org",
   "@type": "ContactPage",
   "name": "Contact SureWhyNot Dev Studio",
-  "url": "https://surewhynot.app/contact.html",
+  "url": "https://surewhynot.app/contact",
   "description": "Contact SureWhyNot via email routing for bugs, technical issues, suggestions, tool requests, and privacy inquiries."
 }
 </script>
