--- a/galactica.html
+++ b/galactica.html
@@ -73,7 +73,7 @@
   "@context": "https://schema.org",
   "@type": "Game",
   "name": "Galactica",
-  "url": "https://surewhynot.app/galactica.html",
+  "url": "https://surewhynot.app/galactica",
   "operatingSystem": "Any",
   "creator": {
     "@type": "Person",
