--- a/json-formatter.html
+++ b/json-formatter.html
@@ -10,12 +10,12 @@
   <!-- SEO -->
   <meta name="description" content="Free JSON formatter and validator. Prettify, minify, validate, sort keys, extract JSON paths, and optionally validate against schema. Runs locally in your browser — no uploads." />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://surewhynot.app/json-formatter.html">
+  <link rel="canonical" href="https://surewhynot.app/json-formatter">
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="JSON Formatter & Validator (Free, Client-Side)">
   <meta property="og:description" content="Prettify, minify, validate JSON instantly. Sort keys, extract paths, and optional schema checks. Runs in your browser — no uploads.">
-  <meta property="og:url" content="https://surewhynot.app/json-formatter.html">
+  <meta property="og:url" content="https://surewhynot.app/json-formatter">
 
   <link rel="stylesheet" href="/assets/site.css">
 
@@ -26,7 +26,7 @@
     "name": "JSON Formatter & Validator",
     "applicationCategory": "DeveloperApplication",
     "operatingSystem": "Web",
-    "url": "https://surewhynot.app/json-formatter.html",
+    "url": "https://surewhynot.app/json-formatter",
     "description": "Free JSON formatter and validator. Prettify, minify, validate, sort keys, extract paths, and optional JSON Schema subset validation. Runs locally in your browser — no uploads."
   }
   </script>
