--- a/json-to-typescript.html
+++ b/json-to-typescript.html
@@ -8,12 +8,12 @@
   <title>JSON to TypeScript — Generate Interfaces & Types (Free, Local)</title>
   <meta name="description" content="Free JSON to TypeScript generator. Paste JSON and instantly generate TypeScript interfaces or type aliases. Runs locally in your browser — no uploads." />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://surewhynot.app/json-to-typescript.html" />
+  <link rel="canonical" href="https://surewhynot.app/json-to-typescript" />
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="JSON to TypeScript Generator (Free, Client-Side)">
   <meta property="og:description" content="Paste JSON and generate TypeScript interfaces/types instantly. Runs locally in your browser — no uploads.">
-  <meta property="og:url" content="https://surewhynot.app/json-to-typescript.html">
+  <meta property="og:url" content="https://surewhynot.app/json-to-typescript">
   <meta property="og:site_name" content="SureWhyNot">
 
   <link rel="stylesheet" href="/assets/site.css">
@@ -25,7 +25,7 @@
   "name": "JSON to TypeScript Interface Generator",
   "applicationCategory": "DeveloperApplication",
   "operatingSystem": "Web",
-  "url": "https://surewhynot.app/json-to-typescript.html",
+  "url": "https://surewhynot.app/json-to-typescript",
   "description": "Free JSON to TypeScript generator that runs entirely in the browser — paste JSON and generate interfaces or type aliases without uploads.",
   "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
 }
