--- a/jwt-decoder.html
+++ b/jwt-decoder.html
@@ -8,12 +8,12 @@
   <title>JWT Decoder & Inspector — Decode, Verify HS256/384/512, Check exp/iat/nbf (Free, Local)</title>
   <meta name="description" content="Free JWT decoder & inspector: decode header/payload, check exp/iat/nbf, copy/download, and optionally verify HS256/384/512. Runs locally in your browser — no uploads." />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://surewhynot.app/jwt-decoder.html" />
+  <link rel="canonical" href="https://surewhynot.app/jwt-decoder" />
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="JWT Decoder & Inspector (Local, Privacy-Forward)">
   <meta property="og:description" content="Decode JWT header/payload, check exp/iat/nbf, copy/download, optional HS* verify. Runs locally — no uploads.">
-  <meta property="og:url" content="https://surewhynot.app/jwt-decoder.html">
+  <meta property="og:url" content="https://surewhynot.app/jwt-decoder">
   <meta property="og:site_name" content="SureWhyNot">
 
   <link rel="stylesheet" href="/assets/site.css">
@@ -25,7 +25,7 @@
     "name":"JWT Decoder & Inspector",
     "applicationCategory":"DeveloperApplication",
     "operatingSystem":"Web",
-    "url":"https://surewhynot.app/jwt-decoder.html",
+    "url":"https://surewhynot.app/jwt-decoder",
     "description":"JWT decoder & inspector: decode header/payload, check exp/iat/nbf, copy/download, and optionally verify HS256/384/512. Runs locally — no uploads.",
     "offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}
   }
