--- a/roguelike.html
+++ b/roguelike.html
@@ -9,11 +9,11 @@
   <!-- SEO -->
   <meta name="description" content="Top-down browser roguelike with 25 guaranteed-beatable levels (0–24). Procedural maps, enemy scaling, and local best-score tracking." />
   <meta name="robots" content="index,follow" />
-  <link rel="canonical" href="https://surewhynot.app/roguelike.html" />
+  <link rel="canonical" href="https://surewhynot.app/roguelike" />
   <meta property="og:title" content="Roguelike | surewhynot.app" />
   <meta property="og:description" content="25 beatable procedural levels (0–24). Enemy scaling. Touch swipe controls. Best moves and time saved locally." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://surewhynot.app/roguelike.html" />
+  <meta property="og:url" content="https://surewhynot.app/roguelike" />
 
   <!-- Google AdSense -->
   <script async
@@ -74,7 +74,7 @@
   "@context": "https://schema.org",
   "@type": "Game",
   "name": "Roguelike",
-  "url": "https://surewhynot.app/roguelike.html",
+  "url": "https://surewhynot.app/roguelike",
   "description": "Top-down browser roguelike with 25 guaranteed-beatable procedural levels (0–24).",
   "operatingSystem": "Any",
   "creator": {
