--- a/uuid-generator.html
+++ b/uuid-generator.html
@@ -12,12 +12,12 @@
 
   <title>UUID Generator (v4, v5, v7) + Validator — Bulk, Search, Export (Free)</title>
   <meta name="description" content="Free UUID generator and validator. Generate UUID v4 (random), v5 (namespace+name), and v7 (time-ordered). Bulk generate, search, sort, copy, and export TXT/CSV. Runs locally in your browser — no uploads." />
-  <link rel="canonical" href="https://surewhynot.app/uuid-generator.html">
+  <link rel="canonical" href="https://surewhynot.app/uuid-generator">
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="UUID Generator + Validator (Free, Client-Side)">
   <meta property="og:description" content="UUID v4/v5/v7 generator with bulk, search, sort, copy, and export. Runs locally — no uploads.">
-  <meta property="og:url" content="https://surewhynot.app/uuid-generator.html">
+  <meta property="og:url" content="https://surewhynot.app/uuid-generator">
 
   <link rel="stylesheet" href="/assets/site.css">
 
@@ -28,7 +28,7 @@
     "name": "UUID Generator + Validator",
     "applicationCategory": "DeveloperApplication",
     "operatingSystem": "Web",
-    "url": "https://surewhynot.app/uuid-generator.html",
+    "url": "https://surewhynot.app/uuid-generator",
     "description": "Free UUID generator and validator. Generate UUID v4 (random), v5 (namespace+name), and v7 (time-ordered). Bulk generate, search, sort, copy, and export TXT/CSV. Runs locally in your browser — no uploads."
   }
   </script>
