--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+
+  <!-- Start cookieyes banner -->
+  <script id="cookieyes" async type="text/javascript" src="https://cdn-cookieyes.com/client_data/b0872fcf9e2c426859698b10be285be4/script.js"></script>
+  <!-- End cookieyes banner -->
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -218,8 +223,6 @@
             </div>
           </div>
 	 	  
-
-
         </section>
       </div>
     </main>
