--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>JSON Formatter, JWT Decoder & Security Tools | SureWhyNot</title>
+  <title>Free Online JSON Formatter, JWT Decoder & Security Tools | SureWhyNot</title>
   <meta name="description" content="Free online JSON formatter, JWT decoder, CSP analyzer, hash generator, UUID generator, and log tools. Browser-based developer and security utilities." />
   <link rel="canonical" href="https://surewhynot.app/" />
   <meta name="robots" content="index,follow" />
 
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="SureWhyNot — Developer Tools & Security Utilities" />
+  <meta property="og:title" content="Free Online JSON Formatter, JWT Decoder & Security Tools | SureWhyNot" />
   <meta property="og:description" content="Local-first tools for builders: JSON, JWT, CSP, hashes, UUIDs — plus mini games. No accounts. No uploads." />
   <meta property="og:url" content="https://surewhynot.app/" />
 
@@ -21,7 +21,7 @@
     "@type": "WebSite",
     "name": "SureWhyNot Dev Studio",
     "url": "https://surewhynot.app/",
-    "description": "Browser-based developer and security tools. Local-first utilities for builders.",
+    "description": "Free online JSON formatter, JWT decoder, CSP analyzer, hash generator, UUID generator, and log tools.",
     "publisher": {
       "@type": "Person",
       "name": "Ced"
