--- a/json-formatter.old.html
+++ b/json-formatter.old.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Free Online JSON Formatter & Validator | SureWhyNot</title>
+  <title>JSON Formatter & Validator — Prettify, Minify, Validate (Free)</title>
 
   <!-- SEO -->
-  <meta name="description" content="Free online JSON formatter and validator. Prettify, minify, validate, sort keys, extract JSON paths, and optionally validate against schema. Runs locally in your browser — no uploads." />
+  <meta name="description" content="Free JSON formatter and validator. Prettify, minify, validate, sort keys, extract JSON paths, and optionally validate against schema. Runs locally in your browser — no uploads." />
   <meta name="robots" content="index,follow" />
   <link rel="canonical" href="https://surewhynot.app/json-formatter">
 
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Free Online JSON Formatter & Validator | SureWhyNot">
+  <meta property="og:title" content="JSON Formatter & Validator (Free, Client-Side)">
   <meta property="og:description" content="Prettify, minify, validate JSON instantly. Sort keys, extract paths, and optional schema checks. Runs in your browser — no uploads.">
   <meta property="og:url" content="https://surewhynot.app/json-formatter">
 
@@ -23,11 +23,11 @@
   {
     "@context": "https://schema.org",
     "@type": "SoftwareApplication",
-    "name": "Free Online JSON Formatter & Validator",
+    "name": "JSON Formatter & Validator",
     "applicationCategory": "DeveloperApplication",
     "operatingSystem": "Web",
     "url": "https://surewhynot.app/json-formatter",
-    "description": "Free online JSON formatter and validator. Prettify, minify, validate, sort keys, extract JSON paths, and optionally validate against schema. Runs locally in your browser — no uploads."
+    "description": "Free JSON formatter and validator. Prettify, minify, validate, sort keys, extract paths, and optional JSON Schema subset validation. Runs locally in your browser — no uploads."
   }
   </script>
 
@@ -102,7 +102,7 @@
             <div class="pad">
 
               <!-- Proper semantic headings with NO default styling impact -->
-              <h1 class="h1" style="margin:0;">Free Online JSON Formatter &amp; Validator</h1>
+              <h1 class="h1" style="margin:0;">JSON Formatter &amp; Validator</h1>
               <h2 class="muted" style="margin:2px 0 0 0;font-size:12px;font-weight:normal;">
                 Prettify • Minify • Validate • Sort Keys • Extract Paths
               </h2>
@@ -248,58 +248,7 @@
       </div>
     </main>
 
-    
-    <section style="padding:0 0 26px;">
-      <div class="card">
-        <div class="pad">
-          <div class="h1">About this tool</div>
-
-          <div class="muted">
-            Format JSON online without sending it anywhere. This page is a browser-based JSON formatter and validator: it can pretty print
-            (prettify) JSON for readability, minify JSON for compact payloads, and validate strict JSON syntax to catch missing commas,
-            quotes, or brackets. It’s built for fast API debugging, log cleanup, and webhook payload inspection.
-          </div>
-
-          <div class="hr"></div>
-
-          <div class="h2">Common use cases</div>
-          <ul class="muted" style="margin:8px 0 0 18px; padding:0;">
-            <li>Prettify JSON responses from REST/GraphQL endpoints</li>
-            <li>Minify JSON before sending requests or saving fixtures</li>
-            <li>Validate JSON and pinpoint syntax issues quickly</li>
-            <li>Sort object keys to make diffs stable and reviewable</li>
-            <li>Extract values using JSON paths when you only need one field</li>
-          </ul>
-
-          <div class="hr"></div>
-
-          <div class="h2">How it works</div>
-          <div class="muted">
-            The formatter uses native browser parsing for strict validation and transformations. Your input stays on your device: there’s no
-            account, no upload step, and no backend processing required for formatting/validation. Output updates when you run actions like
-            prettify, minify, sort, or extract, and the diff view helps compare your current input against a previous snapshot.
-          </div>
-
-          <div class="hr"></div>
-
-          <div class="h2">FAQ</div>
-
-          <div class="muted" style="margin-top:8px"><strong>Does this send JSON to a server?</strong><br>
-            No — formatting and validation run locally in your browser.
-          </div>
-
-          <div class="muted" style="margin-top:10px"><strong>Can it handle large JSON?</strong><br>
-            Yes, up to your browser’s memory limits. If a payload is huge, try minify/pretty print in steps.
-          </div>
-
-          <div class="muted" style="margin-top:10px"><strong>Why “validate” fails when it looks like JSON?</strong><br>
-            JSON is stricter than JavaScript objects (double quotes, no trailing commas, no comments). One invalid character will fail strict parsing.
-          </div>
-        </div>
-      </div>
-    </section>
-
-<div id="site-footer"></div>
+    <div id="site-footer"></div>
   </div>
 
   <script>
