--- a/csp-analyzer.old.html
+++ b/csp-analyzer.old.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Free Online CSP & Security Headers Analyzer — Parse, Score, Report (Local) | SureWhyNot</title>
+  <title>CSP & Security Headers Analyzer — Parse, Score, Report (Local)</title>
   <meta name="description" content="Analyze Content-Security-Policy and security headers. Parse directives, flag unsafe patterns, severity findings, and export a report. Runs locally in your browser — no uploads." />
   <link rel="canonical" href="https://surewhynot.app/csp-analyzer" />
 
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Free Online CSP & Security Headers Analyzer (Local)">
+  <meta property="og:title" content="CSP & Security Headers Analyzer (Local)">
   <meta property="og:description" content="Parse CSP + security headers, severity findings, and export reports. Runs locally — no uploads.">
   <meta property="og:url" content="https://surewhynot.app/csp-analyzer">
 
@@ -113,46 +113,14 @@
 
           <div class="card">
             <div class="pad">
-              <div class="h1">Free Online CSP &amp; Security Headers Analyzer</div>
+              <div class="h1">CSP &amp; Security Headers Analyzer</div>
 
-              <!-- SEO content (matches site typography) -->
+              <!-- SEO paragraphs (styled to match your site) -->
               <div class="muted" style="margin-top:10px">
-                A free online CSP &amp; security headers analyzer for quickly reviewing response security posture. Paste a <span class="mono">Content-Security-Policy</span> header (or full response headers) to parse directives, surface risky patterns, and generate a shareable findings report — runs locally in your browser, with no uploads.
+                Paste a Content-Security-Policy (CSP) header (or full response headers) to parse directives, flag risky tokens, and generate a copy/download report — runs locally, no uploads.
               </div>
-
               <div class="muted" style="margin-top:10px">
-                The analyzer highlights common CSP weaknesses such as <span class="mono">'unsafe-inline'</span>, <span class="mono">'unsafe-eval'</span>, wildcard sources, overly-broad origins, missing <span class="mono">object-src</span>, missing <span class="mono">frame-ancestors</span>, and weak defaults that increase XSS, clickjacking, or injection risk.
-              </div>
-
-              <div class="h2" style="margin-top:14px">Common use cases</div>
-              <ul style="margin-top:8px">
-                <li>Review CSP during incident response or security triage</li>
-                <li>Validate a CSP change before deploying to production</li>
-                <li>Spot unsafe tokens and broad allowlists in third-party integrations</li>
-                <li>Check for missing headers like <span class="mono">X-Content-Type-Options</span>, <span class="mono">Referrer-Policy</span>, and <span class="mono">Permissions-Policy</span></li>
-                <li>Generate a quick report for tickets, PR reviews, or audits</li>
-              </ul>
-
-              <div class="h2" style="margin-top:14px">How it works</div>
-              <div class="muted" style="margin-top:8px">
-                Input is parsed client-side. CSP directives are tokenized into sources, keywords, and flags, then evaluated against a set of rules to produce severity findings. If you paste full response headers, the tool also extracts and reviews common security headers. Because everything runs in-browser, the content you paste stays on your machine.
-              </div>
-
-              <div class="h2" style="margin-top:14px">FAQ</div>
-
-              <div style="margin-top:8px">
-                <div class="lbl">Does this tool upload my headers or CSP?</div>
-                <div class="muted" style="margin-top:4px">No. Analysis runs locally in your browser and nothing is sent to a backend.</div>
-              </div>
-
-              <div style="margin-top:10px">
-                <div class="lbl">Can I paste a full header block instead of only CSP?</div>
-                <div class="muted" style="margin-top:4px">Yes. Paste response headers and the analyzer will extract CSP and evaluate other common security headers.</div>
-              </div>
-
-              <div style="margin-top:10px">
-                <div class="lbl">Why is <span class="mono">'unsafe-inline'</span> flagged?</div>
-                <div class="muted" style="margin-top:4px">It weakens script/style restrictions and often enables injection paths. Prefer nonces/hashes and narrow sources where possible.</div>
+                Highlights common issues like <span class="mono">'unsafe-inline'</span>, <span class="mono">'unsafe-eval'</span>, wildcard sources, missing <span class="mono">object-src</span>, and missing <span class="mono">frame-ancestors</span>.
               </div>
 
               <div class="hr"></div>
